samples/_failures_safe/1761598121_4d87e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87734713.c: In function ‘main’:
./samples/SAFE/__tmp_87734713.c:181:5: error: expected expression at end of input
  181 |     char input[
      |     ^~~~
./samples/SAFE/__tmp_87734713.c:181:5: error: expected declaration or statement at end of input
